header mobile fix burger button align self

--- a/css/header.css
+++ b/css/header.css
@@ -29,7 +29,6 @@ header {
     height: 56px;
     width: 100%;
     display: flex;
-    align-items: center;
     z-index: 1;
     position: relative;
     order: 2;
@@ -40,6 +39,7 @@ header {
     height: 23px;
     position: absolute;
     right: 20px;
+    align-self: center;
 }
 
 .navigation {
